<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="action_settings">Settings</string>

    <string name="hub_title">My Nanodegree Apps!</string>
    <string name="hub_spotify">Spotify Streamer</string>
    <string name="hub_scores">Scores App</string>
    <string name="hub_library">Library App</string>
    <string name="hub_bigger">Build It Bigger</string>
    <string name="hub_xyz">XYZ Reader</string>
    <string name="hub_capstone">Capstone: My own app</string>

    <string name="hub_toast_spotify">This button will launch my Spotify Streamer App</string>
    <string name="hub_toast_scores">This button will launch my Scores App</string>
    <string name="hub_toast_library">This button will launch my Library App</string>
    <string name="hub_toast_bigger">This button will launch my Build It Bigger App</string>
    <string name="hub_toast_xyz">This button will launch my XYZ Reader App</string>
    <string name="hub_toast_capstone">This button will launch my capstone App</string>

</resources>
