<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".HubActivity">

    <TextView
        style="@style/HubTitle"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/hub_title"
        android:id="@+id/textView" />

    <Button
        style="@style/HubButton"
        android:layout_height="wrap_content"
        android:text="@string/hub_spotify"
        android:id="@+id/button_spotify"
        android:layout_below="@+id/textView"/>

    <Button
        style="@style/HubButton"
        android:text="@string/hub_scores"
        android:id="@+id/button_scores"
        android:layout_below="@+id/button_spotify" />

    <Button
        style="@style/HubButton"
        android:text="@string/hub_library"
        android:id="@+id/button_library"
        android:layout_below="@+id/button_scores" />

    <Button
        style="@style/HubButton"
        android:text="@string/hub_bigger"
        android:id="@+id/button_bigger"
        android:layout_below="@+id/button_library" />

    <Button
        style="@style/HubButton"
        android:text="@string/hub_xyz"
        android:id="@+id/button_xyz"
        android:layout_below="@+id/button_bigger" />

    <Button
        style="@style/HubButtonAccent"
        android:text="@string/hub_capstone"
        android:id="@+id/button_capstone"
        android:layout_below="@+id/button_xyz"/>

</RelativeLayout>
